--- a/math/shape-space/triangles.html
+++ b/math/shape-space/triangles.html
@@ -6,3 +6,17 @@ layout: shape-space
 
 <h1>Triangles</h1>
 <p>In this tutorial, we'll learn about <b>Triangles</b>.</p>
+
+<section>
+    <h2>What are Triangles?</h2>
+    <p>Triangles are Polygons that have three sides. We can classify Triangles based on sides and angles, as shown below.</p>
+</section>
+
+<section>
+    <h2>Classifying Triangles</h2>
+    <p>You can classify Triangles based on sides and angles.</p>
+    <section>
+        <h3></h3>
+        <p></p>
+    </section>
+</section>
