--- a/math/shape-space/triangles.html
+++ b/math/shape-space/triangles.html
@@ -16,7 +16,11 @@ layout: shape-space
     <h2>Classifying Triangles</h2>
     <p>You can classify Triangles based on sides and angles.</p>
     <section>
-        <h3></h3>
+        <h3>Classifying by Sides</h3>
+        <p></p>
+    </section>
+    <section>
+        <h3>Classifying by Angles</h3>
         <p></p>
     </section>
 </section>
