--- a/math/shape-space/triangles.html
+++ b/math/shape-space/triangles.html
@@ -17,7 +17,10 @@ layout: shape-space
     <p>You can classify Triangles based on sides and angles.</p>
     <section>
         <h3>Classifying by Sides</h3>
-        <p></p>
+        <p>You can classify triangles by sides depending on the number of equal sides.</p>
+        <p>A triangle is <i>scalene</i> if the length of all of the sides are not equal to each other.</p>
+        <p>A triangle is <i>isosceles</i> if there are at least two equal sides in the triangle.</p>
+        <p>A triangle is <i>equilateral</i> if all of the sides are equal. An equilateral triangle is also isosceles.</p>
     </section>
     <section>
         <h3>Classifying by Angles</h3>
