--- a/math/shape-space/triangles.html
+++ b/math/shape-space/triangles.html
@@ -24,6 +24,6 @@ layout: shape-space
     </section>
     <section>
         <h3>Classifying by Angles</h3>
-        <p></p>
+        <p>You can also classify a triangle based on its angles by what type they are (acuta, obtuse, right).</p>
     </section>
 </section>
