--- a/math/shape-space/triangles.html
+++ b/math/shape-space/triangles.html
@@ -25,5 +25,8 @@ layout: shape-space
     <section>
         <h3>Classifying by Angles</h3>
         <p>You can also classify a triangle based on its angles by what type they are (acuta, obtuse, right).</p>
+        <p>A triangle is acute if all of the angles are acute angles (less than 90&deg;).</p>
+        <p>A triangle is right is it has a right angle (90&deg;).</p>
+        <p>A triangle is obtuse if it has an obtuse angle (greater than 90&deg; but less than 180&deg;).</p>
     </section>
 </section>
