--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -50,7 +50,7 @@ print(type(q.queue))
 
 <section id="enqueuing">
     <h2>Enqueuing</h2>
-    <p>With Queues, </p>
+    <p>With Queues, we can add items, and we can remove items. As we already know, by adding to a Queue, it goes to the end. We call this <i>enqueuing</i> to the Queue.</p>
 </section>
 
 <section id="dequeuing">
