--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -60,9 +60,11 @@ q.put("item goes to the end")
 <section id="dequeuing">
     <h2>Dequeuing</h2>
     <p>With Queues, we can also remove items. As we already know, by removing from a Queue, it takes the item at the start of the Queue. We call this <i>dequeuing</i> from the Queue.</p>
-    <p>With the <code>Queue</code> class, we use the <code>put</code> method on the queue to do this.</p>
+    <p>With the <code>Queue</code> class, we use the <code>get</code> method on the queue to do this.</p>
     <pre><code class="language-python">
 q.put("item goes to the end")
+print(q.get()) # prints out "item goes to the end"
+print(q.empty()) # True
     </code></pre>
 </section>
 
