--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -81,6 +81,6 @@ print(q.empty()) # True
     </section>
     <section id="implementing-queues-in-contests">
         <h3>Implementing Queues in Contests</h3>
-        <p>When you are using Queues, you have two main options when it comes to implementing Queues: creating your own <code>Stack</code> class or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features. Of course, this would use up memory so try to limit to built-in functions if you can. So, it's a good idea to just use a <code>list</code> most of the time.</p>
+        <p>When you are using Queues, you have two main options when it comes to implementing Queues: creating your own <code>Queue</code> class, using the <code>queue.Queue</code> class, or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features. Of course, this would use up memory so try to limit to built-in functions if you can. So, it's a good idea to just use a <code>list</code> or the <code>Queue</code> class most of the time.</p>
     </section>
 </section>
