--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -5,4 +5,82 @@ permalink: /programming/python/data-structures-and-algorithms/deques/
 ---
 
 <h1>Deques</h1>
-<p></p>
+<p>In this tutorial, we'll learn about Deques.</p>
+
+
+<section id="what-are-deques">
+    <h2>What are Deques?</h2>
+    <p>Deques are another very fundamental type of data structure. They are the same as Queues, except they are <i>double-ended</i>, meaning that you can add to the front and start of the Queue and remove from both the start and the end, making them possible alternatives to Queues.</p>
+    <p>In Programming, Queues are similar to line-ups of people in real life. For example, let's say that some people are lining up to go on a rollar coaster:</p>
+    <div class="Row">
+        <div class="Column">Rollar<br>Coaster</div>
+        <div class="Column">4</div>
+        <div class="Column">67</div>
+        <div class="Column">-32</div>
+        <div class="Column">8</div>
+        <div class="Column">91</div>
+    </div>
+    <p>These people don't want to get out of line because they've been lining up for a long time. So, you can only add to then end of the Queue/line and the people get out of the line at the front. We call this a "First In Last Out" (<i>FILO</i>) rule.</p>
+</section>
+
+<section id="queue-implementation">
+    <h2>Queue Implementation</h2>
+    <p>In Python, we actually have a built-in module called <code>queue</code> that comes with a <code>Queue</code> class. We can use this class to represent a Queue. As an example, type the following code into your file:</p>
+    <pre><code class="language-python">
+from queue import Queue
+
+my_queue = Queue()
+print(my_queue.empty())
+    </code></pre>
+    <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> module and then we assign an empty Queue to the variable <var>q</var>. After we do this, we call the <code>empty</code> method on <var>q</var> and we print out the result. The <code>empty</code> function returns a <a href="/programming/python/data-types#booleans">Boolean</a> which indicates whether or not the Queue is empty. Since we haven't actually added anything to the Queue yet, it is still empty so our program will print out <samp>True</samp>.</p>
+    <small><i class="fas fa-exclamation-circle"></i> You can find more methods and information on the <code>Queue</code> class on the <a href="https://docs.python.org/3/library/queue.html#queue-objects" target="_blank">Official Python Documentation</a>.</small><br>
+    <p>Then, type the following code into your program:</p>
+    <pre><code class="language-python">
+q.put(5)
+q.put("hi")
+q.put("more stuff")
+q.put(True)
+print(q.queue)
+print(type(q.queue))
+    </code></pre>
+    <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
+&#60;class 'collections.deque'></samp><br> printed out into the terinal.</p>
+    <p>Notice how the type of <code>q.queue</code> is of <code>collections.deque</code>. This is a seperate class that implements a <a href="/programming/python/data-structures-and-algorithms/deques/">Deque</a>, which we'll learn about in the next tutorial.</p>
+</section>
+
+<section id="enqueuing">
+    <h2>Enqueuing</h2>
+    <p>With Queues, we can add items, and we can remove items. As we already know, by adding to a Queue, it goes to the end. We call this <i>enqueuing</i> to the Queue.</p>
+    <p>With the <code>Queue</code> class, we use the <code>put</code> method on the queue to do this.</p>
+    <pre><code class="language-python">
+q.put("item goes to the end")
+    </code></pre>
+</section>
+
+<section id="dequeuing">
+    <h2>Dequeuing</h2>
+    <p>With Queues, we can also remove items. As we already know, by removing from a Queue, it takes the item at the start of the Queue. We call this <i>dequeuing</i> from the Queue.</p>
+    <p>With the <code>Queue</code> class, we use the <code>get</code> method on the queue to do this.</p>
+    <pre><code class="language-python">
+q.put("item goes to the end")
+print(q.get()) # prints out "item goes to the end"
+print(q.empty()) # True
+    </code></pre>
+</section>
+
+<section id="queues-in-competitions">
+    <h2>Queues in Competition</h2>
+    <p>We've already gone over how Queues work and how to implement one. So, now, let's go over using Queues in Programming Competitions and Job Interview problems.</p>
+    <section id="when-to-use-queues">
+        <h3>When To Use Queues</h3>
+        <p>In Programming problems, it is often useful to use Queues when:</p>
+        <ul>
+            <li>Lines are Involved (Lining up to go somewhere, etc.)</li>
+            <li>There Is A "First In First Out" Format</li>
+        </ul>
+    </section>
+    <section id="implementing-queues-in-contests">
+        <h3>Implementing Queues in Contests</h3>
+        <p>When you are using Queues, you have two main options when it comes to implementing Queues: creating your own <code>Queue</code> class, using the <code>queue.Queue</code> class, or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features. Of course, this would use up memory so try to limit to built-in functions if you can. So, it's a good idea to just use a <code>list</code> or the <code>Queue</code> class most of the time.</p>
+    </section>
+</section>
