--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -11,7 +11,7 @@ permalink: /programming/python/data-structures-and-algorithms/deques/
 <section id="what-are-deques">
     <h2>What are Deques?</h2>
     <p>Deques are another very fundamental type of data structure. They are the same as Queues, except they are <i>double-ended</i>, meaning that you can add to the front and start of the Queue and remove from both the start and the end, making them possible alternatives to Queues.</p>
-    <p>In Programming, Queues are similar to line-ups of people in real life. For example, let's say that some people are lining up to go on a rollar coaster:</p>
+    <!-- <p>In Programming, Queues are similar to line-ups of people in real life. For example, let's say that some people are lining up to go on a rollar coaster:</p>
     <div class="Row">
         <div class="Column">Rollar<br>Coaster</div>
         <div class="Column">4</div>
@@ -19,7 +19,7 @@ permalink: /programming/python/data-structures-and-algorithms/deques/
         <div class="Column">-32</div>
         <div class="Column">8</div>
         <div class="Column">91</div>
-    </div>
+    </div> -->
     <p>These people don't want to get out of line because they've been lining up for a long time. So, you can only add to then end of the Queue/line and the people get out of the line at the front. We call this a "First In Last Out" (<i>FILO</i>) rule.</p>
 </section>
 
