--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -23,14 +23,13 @@ permalink: /programming/python/data-structures-and-algorithms/deques/
     <p>These people don't want to get out of line because they've been lining up for a long time. So, you can only add to then end of the Queue/line and the people get out of the line at the front. We call this a "First In Last Out" (<i>FILO</i>) rule.</p>
 </section>
 
-<section id="queue-implementation">
-    <h2>Queue Implementation</h2>
-    <p>In Python, we actually have a built-in module called <code>queue</code> that comes with a <code>Queue</code> class. We can use this class to represent a Queue. As an example, type the following code into your file:</p>
+<section id="deque-implementation">
+    <h2>Deque Implementation</h2>
+    <p>In Python, we actually have a built-in module called <code>collections</code> that comes with a <code>deque</code> class. We can use this class to represent a Deque. As an example, type the following code into your file:</p>
     <pre><code class="language-python">
-from queue import Queue
+from collections import deque
 
-my_queue = Queue()
-print(my_queue.empty())
+d = deque()
     </code></pre>
     <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> module and then we assign an empty Queue to the variable <var>q</var>. After we do this, we call the <code>empty</code> method on <var>q</var> and we print out the result. The <code>empty</code> function returns a <a href="/programming/python/data-types#booleans">Boolean</a> which indicates whether or not the Queue is empty. Since we haven't actually added anything to the Queue yet, it is still empty so our program will print out <samp>True</samp>.</p>
     <small><i class="fas fa-exclamation-circle"></i> You can find more methods and information on the <code>Queue</code> class on the <a href="https://docs.python.org/3/library/queue.html#queue-objects" target="_blank">Official Python Documentation</a>.</small><br>
