--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ layout: default
     <h2>Contributing</h2>
     <p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would greatly appreciate it if you contributed through pull requests and issues. For more information, click <a href="/contributing/">here</a>.</p>
     <h2>Contact</h2>
-    <p>You can email us <a href="mailto:learnmonkey2@gmail.com">here</a>.</p>
+    <p>You can join our Discord Server <a href="https://discord.gg/aecVAgzgqV%22">here</a>.</p>
 </section>
