--- a/programming/python/sockets/index.html
+++ b/programming/python/sockets/index.html
@@ -6,3 +6,8 @@ permalink: /programming/python/sockets/
 
 <h1>Python Sockets</h1>
 <p>In this tutorial series, you'll learn about programming with Sockets with Python, guiding you from the very basics to making a simple live-time CLI chat-app!</p>
+
+<section>
+    <h2>What are Sockets?</h2>
+    <p>Before we start coding, we need to answer the question, <i>what is a socket?</i> Well, a simple definition of a socket is</p>
+</section>
