--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -36,8 +36,8 @@ d = deque()
     <p>Then, type the following code into your program:</p>
     <pre><code class="language-python">
 d.append(5)
-q.append("hi")
-q.appendleft("more stuff")
+d.append("hi")
+d.appendleft("more stuff")
 print(deque)
     </code></pre>
     <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
