--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -38,7 +38,7 @@ d = deque()
 d.append(5)
 d.append("hi")
 d.appendleft("more stuff")
-print(deque)
+print(d)
     </code></pre>
     <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
 &#60;class 'collections.deque'></samp><br> printed out into the terinal.</p>
