--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -40,8 +40,7 @@ d.append("hi")
 d.appendleft("more stuff")
 print(d)
     </code></pre>
-    <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
-&#60;class 'collections.deque'></samp><br> printed out into the terinal.</p>
+    <p>After running the code, you'll get<br> <samp>deque(['more stuff', 5, 'hi'])</samp><br> printed out into the terinal.</p>
     <p>Notice how the type of <code>q.queue</code> is of <code>collections.deque</code>. This is a seperate class that implements a <a href="/programming/python/data-structures-and-algorithms/deques/">Deque</a>, which we'll learn about in the next tutorial.</p>
 </section>
 
