--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -43,8 +43,8 @@ print(d)
     <p>After running the code, you'll get<br> <samp>deque(['more stuff', 5, 'hi'])</samp><br> printed out into the terinal.</p>
 </section>
 
-<section id="enqueuing">
-    <h2>Enqueuing</h2>
+<section id="appending-left-and-right">
+    <h2>Appending Left and Right</h2>
     <p>With Queues, we can add items, and we can remove items. As we already know, by adding to a Queue, it goes to the end. We call this <i>enqueuing</i> to the Queue.</p>
     <p>With the <code>Queue</code> class, we use the <code>put</code> method on the queue to do this.</p>
     <pre><code class="language-python">
