--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -45,7 +45,7 @@ print(d)
 
 <section id="appending-left-and-right">
     <h2>Appending Left and Right</h2>
-    <p>With Queues, we can add items, and we can remove items. As we already know, by adding to a Queue, it goes to the end. We call this <i>enqueuing</i> to the Queue.</p>
+    <p>With Deques, we can do the same operations (adding and removing) as we can with a Queue, but we are able to add and pop from both sides of the Deque. As we already know, by adding to a Deque, it goes to the end. However, </p>
     <p>With the <code>Queue</code> class, we use the <code>put</code> method on the queue to do this.</p>
     <pre><code class="language-python">
 q.put("item goes to the end")
