--- a/physics/index.html
+++ b/physics/index.html
@@ -8,7 +8,7 @@ layout: default
     <p>There is lots of physics content on Learnmonkey. Below is a list of physics topics we cover:</p>
     <ul>
         <li><a href="/physics/astronomy/">Astronomy</a></li>
-        <li><a href="/physics/electrical-engineering/">Electrical Engineering</a></li>
+        <!-- <li><a href="/physics/electrical-engineering/">Electrical Engineering</a></li> -->
     </ul>
     <img src="/images/physics/physics.jpg">
     <p>Find more physics tutorials in the <a href="/tutorial-index/">tutorial index</a>.</p>
