--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -1,9 +1,11 @@
 ---
-title: Introduction to Electrical Engineering
+title: Electrical Engineering
 permalink: /physics/electrical-engineering/
-layout: electrical-engineering
+layout: default
 ---
-<h1>Introduction to Electrical Engineering</h1>
+<h1>Content Removed</h1>
+<p>Unfortunately, Electrical Engineering has been removed for inappropriate or inaccurate content.</p>
+<!-- <h1>Introduction to Electrical Engineering</h1>
 
 <section>
     <h2>What is Electrical Engineering?</h2>
@@ -14,4 +16,4 @@ layout: electrical-engineering
 <section>
     <h2>Why Learn Electrical Engineering?</h2>
     <p>Electricity and electronics are fundamental to our lives and it's good to know how they work. Also, electrical engineering is in many curriculums worldwide.</p>
-</section>
+</section> -->
