replace link with new content

--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -32,7 +32,7 @@ from collections import deque
 d = deque()
     </code></pre>
     <p>In this example, we create an empty Deque using the <code>deque</code> class. We could've also passed in a list for the Deque to initialize from. We first import it from the <code>collectins</code> module and then we assign an empty Deque to the variable <var>d</var>.</p>
-    <small><i class="fas fa-exclamation-circle"></i> You can find more methods and information on the <code>Queue</code> class on the <a href="https://docs.python.org/3/library/queue.html#queue-objects" target="_blank">Official Python Documentation</a>.</small><br>
+    <small><i class="fas fa-exclamation-circle"></i> You can find more methods and information on the <code>deque</code> class on the <a href="https://docs.python.org/3/library/collections.html#collections.deque" target="_blank">Official Python Documentation</a>.</small><br>
     <p>Then, type the following code into your program:</p>
     <pre><code class="language-python">
 d.append(5)
