--- a/contributing.html
+++ b/contributing.html
@@ -19,3 +19,5 @@ layout: default
 </ul>
 <p>Now, you can run Learnmonkey: </p>
 <pre><code class="language-batch">bundle exec jekyll serve</code></pre>
+
+<p>Just forking the GitHub repository on GitHub will allow you to view the site if you connect the <code>main</code> branch to GitHub pages and run the site. However, do note that this method will mess up the permalinks so you will need to type the links in your address bar manually.</p>
