add content back but not lol

--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -1,11 +1,9 @@
 ---
 title: Electrical Engineering
 permalink: /physics/electrical-engineering/
-layout: default
+layout: electrical-engineering
 ---
-<h1>Content Removed</h1>
-<p>Unfortunately, Electrical Engineering has been removed for inappropriate or inaccurate content.</p>
-<!-- <h1>Introduction to Electrical Engineering</h1>
+<h1>Introduction to Electrical Engineering</h1>
 
 <section>
     <h2>What is Electrical Engineering?</h2>
@@ -16,4 +14,4 @@ layout: default
 <section>
     <h2>Why Learn Electrical Engineering?</h2>
     <p>Electricity and electronics are fundamental to our lives and it's good to know how they work. Also, electrical engineering is in many curriculums worldwide.</p>
-</section> -->
+</section>
