--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -52,9 +52,11 @@ d.appendleft("item goes to the left")
     </code></pre>
 </section>
 
-<section id="dequeuing">
-    <h2>Dequeuing</h2>
-    <p>With Queues, we can also remove items. As we already know, by removing from a Queue, it takes the item at the start of the Queue. We call this <i>dequeuing</i> from the Queue.</p>
+<section id="dequeuing-items">
+    <h2>Dequeuing Items</h2>
+    <p>Also, similarily with Queues, we can also remove items. It
+        
+    </p>
     <p>With the <code>Queue</code> class, we use the <code>get</code> method on the queue to do this.</p>
     <pre><code class="language-python">
 q.put("item goes to the end")
