--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -54,9 +54,7 @@ d.appendleft("item goes to the left")
 
 <section id="dequeuing-items">
     <h2>Dequeuing Items</h2>
-    <p>Also, similarily with Queues, we can also remove items. It
-        
-    </p>
+    <p>Also, similarily with Queues, we can also remove items. It</p>
     <p>With the <code>Queue</code> class, we use the <code>get</code> method on the queue to do this.</p>
     <pre><code class="language-python">
 q.put("item goes to the end")
