--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -56,9 +56,11 @@ d.appendleft("item goes to the left")
     <p>Also, similarily with Queues, we can also remove items. Because of the double-ended property of a Deque, we can remove items from both sides of the Deque. But, obviously, we won't be able to access items in the middle of the Deque.</p>
     <p>With the <code>deque</code> class, we use the <code>pop</code> and <code>popleft</code> methods on the deque objects to do this.</p>
     <pre><code class="language-python">
-q.put("item goes to the end")
-print(q.get()) # prints out "item goes to the end"
-print(q.empty()) # True
+from collections import deque
+d = deque([1, 2, 3, 4])
+print(d.pop())
+print(d.popleft())
+print(d)
     </code></pre>
 </section>
 
