--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -62,6 +62,10 @@ print(d.pop())
 print(d.popleft())
 print(d)
     </code></pre>
+    <p>The output of this code is:</p>
+    <pre><samp>4
+1
+deque([2, 3])</samp></pre>
 </section>
 
 <section id="queues-in-competitions">
