--- a/programming/python/data-structures-and-algorithms/deques.html
+++ b/programming/python/data-structures-and-algorithms/deques.html
@@ -68,10 +68,10 @@ print(d)
 deque([2, 3])</samp></pre>
 </section>
 
-<section id="queues-in-competitions">
-    <h2>Queues in Competition</h2>
-    <p>We've already gone over how Queues work and how to implement one. So, now, let's go over using Queues in Programming Competitions and Job Interview problems.</p>
-    <section id="when-to-use-queues">
+<section id="deques-in-competitions">
+    <h2>Deques in Competition</h2>
+    <p>In a programming competition, Deques can be used whenever Queues are needed or used because Deques are the exact same as Queues, just double-ended.</p>
+    <!-- <section id="when-to-use-queues">
         <h3>When To Use Queues</h3>
         <p>In Programming problems, it is often useful to use Queues when:</p>
         <ul>
@@ -82,5 +82,5 @@ deque([2, 3])</samp></pre>
     <section id="implementing-queues-in-contests">
         <h3>Implementing Queues in Contests</h3>
         <p>When you are using Queues, you have two main options when it comes to implementing Queues: creating your own <code>Queue</code> class, using the <code>queue.Queue</code> class, or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features. Of course, this would use up memory so try to limit to built-in functions if you can. So, it's a good idea to just use a <code>list</code> or the <code>Queue</code> class most of the time.</p>
-    </section>
+    </section> -->
 </section>
