--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -9,15 +9,10 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 
 <section>
     <h2>What is Big O Notation?</h2>
-    <p></p>
+    <p>Big O Notation is a programming and mathematical concept which measures time and space complexity. Time complexity is the amount of time a function runs, and space complexity is the amount of space, or memory, a function takes up. However, the most used purpose of Big O Notation is for time complexity.</p>
 </section>
 
 <section>
     <h2>Time Complexity</h2>
-    <p></p>
-</section>
-
-<section>
-    <h2>Space Complexity</h2>
-    <p></p>
+    <p>Big O Notation doesn't measure the amount of time a function takes to run in seconds are actual time, but in measures of "O". For example, we could write "O(3)", meanning that the code runs a <i>linear</i> expression or code 3 times. It's okay if you don't understand right now, but at the end of this tutorial, you'll get the idea.</p>
 </section>
