--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -16,3 +16,8 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
     <h2>Time Complexity</h2>
     <p>Big O Notation doesn't measure the amount of time a function takes to run in seconds are actual time, but in measures of "O". For example, we could write "O(3)", meanning that the code runs a <i>linear</i> expression or code 3 times. It's okay if you don't understand right now, but at the end of this tutorial, you'll get the idea.</p>
 </section>
+
+<section>
+    <h2>Measuring Time Complexity Examples</h2>
+    <p></p>
+</section>
