--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -19,5 +19,12 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 
 <section>
     <h2>Measuring Time Complexity Examples</h2>
-    <p></p>
+    <p>Here are some examples of measuring Time Complexity with Big O Notation:</p>
+    <section>
+        <h3>Example #1</h3>
+        <p><pre><code class="language-python">
+for i in range(5):
+    print(i)
+        </code></pre></p>
+    </section>
 </section>
