--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -25,6 +25,6 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
         <p><pre><code class="language-python">
 for i in range(5):
     print(i)
-        </code></pre></p>
+        </code></pre>In this example, the code runs five times, and can be measured at <i>O(5)</i>.</p>
     </section>
 </section>
