--- a/programming/python/data-structures-and-algorithms/dynamic-programming.html
+++ b/programming/python/data-structures-and-algorithms/dynamic-programming.html
@@ -10,6 +10,7 @@ permalink: /programming/python/data-structures-and-algorithms/dynamic-programmin
 <section>
     <h2>What is Dynamic Programming?</h2>
     <p>Dynamic Programming is a method of Programming which involves <a href="/programming/python/data-structures-and-algorithms/recursion/">Recursion</a> and <a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>. It is useful when loops are involved and where you have to calculate a lot of code and expressions. Dynamic Programming accomplishes this quickly by recursively breaking the expression down and calculating each small part. Lots of different interview and competition problems involve Dynamic Programming.</p>
+    <p>It is useful in many recursion problems and problems in which you need to try many different orientations of objects or loop through sub-objects.</p>
 </section>
 
 <section>
