--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -27,4 +27,12 @@ for i in range(5):
     print(i)
         </code></pre>In this example, the code runs five times, and can be measured at <i>O(5)</i>.</p>
     </section>
+    <section>
+        <h3>Example #2</h3>
+        <p><pre><code class="language-python">
+for i in range(5):
+    for j in range(5):
+        print(i + j)
+        </code></pre>In this example, the code runs five times for five times, or 5 x 5 times (25), so it can be measured at <i>O(25)</i>.</p>
+    </section>
 </section>
