--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -35,4 +35,10 @@ for i in range(5):
         print(i + j)
         </code></pre>In this example, the code runs five times for five times, or 5 x 5 times (25), so it can be measured at <i>O(25)</i>.</p>
     </section>
+    <section>
+        <h3>Example #3</h3>
+        <p><pre><code class="language-python">
+print("[insert text here :)]")
+        </code></pre>In this example, we run what is called a <i>linear</i> function, or a function at <i>O(1)</i>.</p>
+    </section>
 </section>
