--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -5,4 +5,18 @@ permalink: /programming/python/data-structures-and-algorithms/recursion/
 ---
 
 <h1>Recursion</h1>
-<p></p>
+
+<section>
+    <h2>What is Recursion?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Recursion Examples</h2>
+    <p></p>
+</section>
+
+<sectio>
+    <h2>Recursion Programming Problems and Exercises</h2>
+    <p></p>
+</sectio>
