--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -8,7 +8,7 @@ permalink: /programming/python/data-structures-and-algorithms/recursion/
 
 <section>
     <h2>What is Recursion?</h2>
-    <p></p>
+    <p>Recursion is a simple yet powerful programming concept which involves functions calling itself. In most cases, you might make a function call itself to get what it returns under a specific test case. Many programming problems will involve recursion to traverse sub-objects or search a tree or graph.</p>
 </section>
 
 <section>
