--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -12,7 +12,7 @@ permalink: /programming/python/data-structures-and-algorithms/recursion/
 </section>
 
 <section>
-    <h2>Recursion Examples</h2>
+    <h2>Recursion Example</h2>
     <p></p>
 </section>
 
