--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -13,7 +13,14 @@ permalink: /programming/python/data-structures-and-algorithms/recursion/
 
 <section>
     <h2>Recursion Example</h2>
-    <p></p>
+    <p>The most popular form and example of using recursion in programming is calculating fibonacci sequence terms. Here's some example code:</p>
+    <pre><code class="language-python">
+def fib(n):
+    if n <= 2:
+        return 1
+    else:
+        return fib(n - 1) + fib(n - 2)
+    </code></pre>
 </section>
 
 <sectio>
