--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -21,6 +21,8 @@ def fib(n):
     else:
         return fib(n - 1) + fib(n - 2)
     </code></pre>
+    <p>This fibonacci example is pretty self-explanatory. We first create a function <code>fib</code> which takes one parameter - the position of the term we want.</p>
+    <p>After, we first do a simple if-statement check. If <var>n</var></p>
 </section>
 
 <sectio>
