--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -22,7 +22,7 @@ def fib(n):
         return fib(n - 1) + fib(n - 2)
     </code></pre>
     <p>This fibonacci example is pretty self-explanatory. We first create a function <code>fib</code> which takes one parameter - the position of the term we want.</p>
-    <p>After, we first do a simple if-statement check. If <var>n</var></p>
+    <p>After, we first do a simple if-statement check. If <var>n</var> is less than 2, we will return 1 as the value of the term. </p>
 </section>
 
 <sectio>
