--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -25,6 +25,7 @@ def fib(n):
     <p>After, we first do a simple if-statement check. If <var>n</var> is less than 2, we will return 1 as the value of the term. Otherwise, we follow the simple rules of the fibonacci sequence and attempt to return the sum of the two previous terms, or <code>fib(n - 1) + fib(n - 2)</code>.</p>
     <p>However, do note that this is one of the more less efficient algorithms for recursion, because our program can easily exceed the maximum recursion limit, which is 1000. So, if you were to call <code>fib(1001)</code>, then you would hit an error.</p>
     <code>RecursionError</code>
+    <p>However, in the next tutorial on <a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>, we'll learn how to make our code more efficent.</p>
 </section>
 
 <sectio>
