--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -30,5 +30,5 @@ def fib(n):
 
 <sectio>
     <h2>Recursion Programming Problems and Exercises</h2>
-    <p></p>
+    <p>Here are some fun programming problems for practicing Recursion skills:</p>
 </sectio>
