--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -28,7 +28,7 @@ def fib(n):
     <p>However, in the next tutorial on <a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>, we'll learn how to make our code more efficent.</p>
 </section>
 
-<sectio>
+<section>
     <h2>Recursion Programming Problems and Exercises</h2>
     <p>Here are some fun programming problems for practicing Recursion skills:</p>
-</sectio>
+</section>
