--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -31,4 +31,12 @@ def fib(n):
 <section>
     <h2>Recursion Programming Problems and Exercises</h2>
     <p>Here are some fun programming problems for practicing Recursion skills:</p>
+    <ul>
+        <li><a href="https://dmoj.ca/problem/ccc04j5" target="_blank">Fractals</a></li>
+        <li><a href="https://dmoj.ca/problem/ccc05j5" target="_blank">Bananas</a></li>
+        <li><a href="https://dmoj.ca/problem/ccc11j5" target="_blank">Unfriend</a></li>
+        <!-- <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li>
+        <li><a href="" target="_blank"></a></li> -->
+    </ul>
 </section>
