--- a/programming/python/data-structures-and-algorithms/recursion.html
+++ b/programming/python/data-structures-and-algorithms/recursion.html
@@ -35,8 +35,8 @@ def fib(n):
         <li><a href="https://dmoj.ca/problem/ccc04j5" target="_blank">Fractals</a></li>
         <li><a href="https://dmoj.ca/problem/ccc05j5" target="_blank">Bananas</a></li>
         <li><a href="https://dmoj.ca/problem/ccc11j5" target="_blank">Unfriend</a></li>
+        <li><a href="https://dmoj.ca/problem/ac19p3" target="_blank">A Recursion Problem</a></li>
         <!-- <li><a href="" target="_blank"></a></li>
-        <li><a href="" target="_blank"></a></li>
         <li><a href="" target="_blank"></a></li> -->
     </ul>
 </section>
