--- a/programming/python/data-structures-and-algorithms/caching.html
+++ b/programming/python/data-structures-and-algorithms/caching.html
@@ -5,4 +5,18 @@ permalink: /programming/python/data-structures-and-algorithms/caching/
 ---
 
 <h1>Caching</h1>
-<p></p>
+
+<section>
+    <h2>What is Caching?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Caching Methods</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Using Cache Methods</h2>
+    <p></p>
+</section>
