--- a/programming/python/data-structures-and-algorithms/caching.html
+++ b/programming/python/data-structures-and-algorithms/caching.html
@@ -8,7 +8,7 @@ permalink: /programming/python/data-structures-and-algorithms/caching/
 
 <section>
     <h2>What is Caching?</h2>
-    <p></p>
+    <p>Caching is a method in Competitve Programming in which you store data so you can access it later faster. For example, you might have a function that takes a number and does lots of different operations to the number. Obviously, just running this function will take some time, so you might use a <i>cache</i> method. Basically, you will store the values of what the function returns in a dictionary so the function can access these values without actually running the operations.</p>
 </section>
 
 <section>
