--- a/programming/python/data-structures-and-algorithms/caching.html
+++ b/programming/python/data-structures-and-algorithms/caching.html
@@ -13,10 +13,10 @@ permalink: /programming/python/data-structures-and-algorithms/caching/
 
 <section>
     <h2>Caching Methods</h2>
-    <p></p>
+    <p>There are many methods of caching but the main one is storing values in a dictionary and making the keys the parameters you pass into a function. For example, a web browser will cache the HTML for a site when you visit it so it can be accessed faster the next time you visit the page. Because cached items are stored in a dictionary, you can easily remove cached items if you want to.</p>
 </section>
 
 <section>
     <h2>Using Cache Methods</h2>
-    <p></p>
+    <p>There are many different cache methods but the main one for Competitve Programming is called <a href="/programming/python/data-structures-and-algorithms/memoization/"><i>Memoization</i></a>, which we'll learn about in the next tutorial.</p>
 </section>
