--- a/programming/python/data-structures-and-algorithms/memoization.html
+++ b/programming/python/data-structures-and-algorithms/memoization.html
@@ -5,4 +5,18 @@ permalink: /programming/python/data-structures-and-algorithms/memoization/
 ---
 
 <h1>Memoization</h1>
-<p></p>
+
+<section>
+    <h2>What is Memoization?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Simple Memoization Implementation</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Built-in Cache Methods in Python</h2>
+    <p></p>
+</section>
