--- a/programming/python/data-structures-and-algorithms/memoization.html
+++ b/programming/python/data-structures-and-algorithms/memoization.html
@@ -33,5 +33,5 @@ def fib(n):
 
 <section>
     <h2>Built-in Cache Methods in Python</h2>
-    <p>In the</p>
+    <p>In the example above, </p>
 </section>
